# MediMe

./: LICENSE
App/: gradle.properties  settings.gradle.kts
App/app/: build.gradle.kts
App/app/src/main/: AndroidManifest.xml
App/app/src/main/java/sara/app/medimeapp/: FirstFragment.kt  (+8 more)
App/app/src/main/res/drawable/: color_swatch_shape.xml  dropdown_background.xml  ic_triangle_down.xml
App/app/src/main/res/layout/: activity_ble_relay.xml  activity_spp_relay.xml  dialog_add_box.xml  fragment_first.xml  fragment_no_medime.xml  fragment_second.xml  item_calendar_day.xml  item_color_option.xml
App/app/src/main/res/menu/: menu_main.xml
App/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
App/app/src/main/res/navigation/: nav_graph.xml
App/app/src/main/res/values/: strings.xml  themes.xml
App/app/src/main/res/values-night/: themes.xml
App/app/src/main/res/values-v23/: themes.xml
App/gradle/wrapper/: gradle-wrapper.properties
esp32/: .gitignore  BUILD-VSCODE.md  CMakeLists.txt  README-BLE.md  sdkconfig.defaults
esp32/.cache/clangd/index/: bt_spp_relay.c.47E5E660D1D3102E.idx  bt_spp_relay.h.0FA6B0CD0F942402.idx  hall_rotate.c.8CD2B48283FC7A59.idx  hall_rotate.h.F9CE3D5B068A599E.idx  main.c.8D62CB0A4EE30552.idx  relay.c.893B18762F5F0C7B.idx  relay.h.E024C6767E54AFBD.idx  spp_task.c.AFBED531ECCC009F.idx  spp_task.h.EC6E7010A94EFF9A.idx
esp32/main/: CMakeLists.txt  Kconfig.projbuild
esp32/main/inc/: ble_relay.h  bt_spp_relay.h  hall_rotate.h  relay.h
esp32/main/src/: Untitled  ble_relay.c  bt_spp_relay.c  hall_rotate.c  main.c  relay.c  spp_task.c
(+2 files in other folders)
